# infra-manager

./: .gitignore  .pre-commit-config.yaml  INFRA_MANAGER.md  Makefile  README.md  docker-compose-extended.yml  docker-compose.yml
backend/: config.py  main.py  pyproject.toml
backend/routers/: health.py  services.py
backend/services/: __init__.py  minio_service.py  mongodb_service.py  postgres_service.py  qdrant_service.py  redis_service.py
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: service-card.tsx
frontend/src/components/ui/: collapsible.tsx
frontend/src/hooks/: use-services.ts
